fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ body {
   background-attachment: fixed; */
   scroll-behavior: smooth;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .primaryButton {
